--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,17 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-tap-event-plugin": "^2.0.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
