--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,11 @@
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-tap-event-plugin": "^2.0.1",
-    "webpack": "^2.2.1",
     "react-redux": "^5.0.4",
-    "redux": "^3.6.0"
+    "react-router": "3.x",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "webpack": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
