--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^5.0.4",
     "react-router": "3.x",
     "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^0.22.4",
     "redux": "^3.6.0",
     "webpack": "^2.2.1"
   },
