change several things: 1). add PropTypes; 2). remove ExecutionSummary related and move them into Scheduler for simplicity; 3). change blur naming  into ; 4) routing

--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.3.0"
+    "mocha": "^3.3.0",
+    "prop-types": "^15.5.10"
   },
   "babel": {
     "presets": [
