--- a/client/package.json
+++ b/client/package.json
@@ -4,30 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register"
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "redux": "^3.6.0",
+    "react-redux": "^5.0.4",
+    "react-router": "3.x",
+    "material-ui": "^0.18.4",
+    "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^0.22.4"
+  },
+  "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "material-ui": "^0.17.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.4",
-    "react-router": "3.x",
-    "react-tap-event-plugin": "^2.0.1",
-    "recharts": "^0.22.4",
-    "redux": "^3.6.0",
-    "webpack": "^2.2.1"
-  },
-  "devDependencies": {
     "chai": "^3.5.0",
+    "enzyme": "^2.9.1",
     "mocha": "^3.3.0",
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "react-test-renderer": "^15.6.1",
+    "webpack": "^2.2.1"
   },
   "babel": {
     "presets": [
