--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive"
+    "test": "./node_modules/mocha-webpack/bin/mocha-webpack --webpack-config webpack.config.test.js \"test/**/*.js\" || true",
+    "build": "./node_modules/.bin/webpack -d"
   },
   "keywords": [],
   "author": "",
@@ -22,14 +23,17 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "chai": "^3.5.0",
     "enzyme": "^2.9.1",
     "mocha": "^3.3.0",
+    "mocha-webpack": "^0.7.0",
     "prop-types": "^15.5.10",
     "react-test-renderer": "^15.6.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "babel": {
     "presets": [
