--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "material-ui": "^0.18.4",
+    "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "redux": "^3.6.0",
     "react-redux": "^5.0.4",
     "react-router": "3.x",
-    "material-ui": "^0.18.4",
     "react-tap-event-plugin": "^2.0.1",
-    "recharts": "^0.22.4"
+    "recharts": "^0.22.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
